tests/snaps/fail/informal.error
error: types in item signatures cannot be elided
   @ informal.vi:4:13
 4 | pub fn main(*io) {

error: search limit reached when finding impl of trait `Add[?13, ~N32, ?13]`
   @ informal.vi:7:3
 7 |   _ += ~1;

error: expected type `IO`; found `&?0`
   @ informal.vi:9:17
 9 |   let IO::I() = io;

error: `*` is only valid in a place pattern
   @ informal.vi:4:13
 4 | pub fn main(*io) {

error: expected a space expression; found a value expression
   @ informal.vi:5:3
 5 |   1 + 1 = 2;

error: cannot find impl of trait `Default[_]`
   @ informal.vi:6:8
 6 |   ~_ = _;

error: cannot find impl of trait `Default[_]`
   @ informal.vi:6:4
 6 |   ~_ = _;

error: expected a space expression; found a value expression
   @ informal.vi:7:9
 7 |   _ += ~1;

error: cannot find impl of trait `Default[_]`
   @ informal.vi:7:3
 7 |   _ += ~1;

error: cannot find impl of trait `Default[_]`
   @ informal.vi:8:15
 8 |   let ~&_ = ~&_;

error: expected a space expression; found a value expression
   @ informal.vi:8:14
 8 |   let ~&_ = ~&_;

error: `&` is invalid in a space pattern
   @ informal.vi:8:8
 8 |   let ~&_ = ~&_;

error: expected a complete pattern
   @ informal.vi:9:7
 9 |   let IO::I() = io;

